fix mobile menu collapse

--- a/public/scss/_body.scss
+++ b/public/scss/_body.scss
@@ -77,6 +77,7 @@
 
 /* Marquee */
 .marquee {
+  min-width: 320px;
   width: var(--marquee-width);
   height: var(--marquee-height);
   overflow: hidden;
@@ -374,23 +375,7 @@ main {
   display: inline;
 }
 
-@media (max-width: 600px) {
-  html { font-size: 12px; }
-  :root {
-    --marquee-width: 100vw;
-    --marquee-height: 30vh;
-    --marquee-elements-displayed: 3;
-
-  }
-
-  .marquee:before, .marquee:after {
-    width: 5rem; 
-  }
-}
-
-
 /* WATCH MOVIE PAGE */
-
 .watch-movie {
   padding-top: 2rem;
   padding-bottom: 8rem;
