--- a/public/scss/_global.scss
+++ b/public/scss/_global.scss
@@ -40,6 +40,7 @@
 }
 
 body {
+  min-width: 320px;
   color: var(--text-primary);
   background-color: var(--bg-primary);
   font-size: 1.2rem;
