--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -137,8 +137,9 @@ nav {
 
 /* Login modal */
 .modal-login {
-  width: 400px;
-  margin: 30px auto;
+  min-width: 305px;
+  width: 380px;
+  margin: 0 auto;
 }
 
 .modal-content {
@@ -146,7 +147,6 @@ nav {
   border: 1px solid $pt-secondary-bgcolor;
   color: $pt-primary-color;
   border-radius: 2px;
-  margin-bottom: 15px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   padding: 25px;
 }
@@ -366,3 +366,9 @@ nav {
   font-weight: 600;
 }
 /* end scaled feedback */
+
+
+// Modal window remove scrollbar
+.modal-open .modal {
+  // overflow-y: hidden;
+}
